force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/ArdiraSurvey__Survey_Result__c.object-meta.xml
<CustomObject>
    <description>The object stores information about an assigned survey.</description>
    <label>Ardira Survey Result</label>
    <nameField>
        <displayFormat>{YYYY}-{000000000}</displayFormat>
        <label>Survey Result ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ardira Survey Results</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>