force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Allowed_Time_Limit_Exceeded__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Allowed_Time_Limit_Exceeded__c</fullName>
    <description>When Maximum Time Allowed in Minutes to response to survey exceeds, this value is set to true.</description>
    <formula>IF(
  AND(
    NOT( ISNULL( ArdiraSurvey__Survey__r.ArdiraSurvey__Maximum_Time_Allowed_in_Minutes__c ) ),
    ArdiraSurvey__Survey__r.ArdiraSurvey__Maximum_Time_Allowed_in_Minutes__c &gt; 0,
    NOT( ISBLANK( ArdiraSurvey__Response_End_Time__c ) ),
    NOT( ISBLANK( ArdiraSurvey__Response_Start_Time__c ) )
  ),
  IF(
    ( 
      (( MINUTE(TIMEVALUE(ArdiraSurvey__Response_End_Time__c)) - MINUTE(TIMEVALUE(ArdiraSurvey__Response_Start_Time__c))) * 60) + 
      ( SECOND(TIMEVALUE(ArdiraSurvey__Response_End_Time__c)) - SECOND(TIMEVALUE(ArdiraSurvey__Response_Start_Time__c)))
    ) &gt;=  (ArdiraSurvey__Survey__r.ArdiraSurvey__Maximum_Time_Allowed_in_Minutes__c * 60),
    TRUE,
    FALSE
  ),
  FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Maximum Time Allowed in Minutes to respond to a survey exceeded.</inlineHelpText>
    <label>Allowed Time Limit Exceeded</label>
    <type>Checkbox</type>
</CustomField>