force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Archive_Record_Error__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Archive_Record_Error__c</fullName>
    <description>This refers to any issues, errors, or problems that occur when attempting to archive or unarchive survey responses.</description>
    <inlineHelpText>This refers to any issues, errors, or problems that occur when attempting to archive or unarchive survey responses.</inlineHelpText>
    <label>Archive Record Error</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>