force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Archive_Status__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Archive_Status__c</fullName>
    <defaultValue>&quot;Not Archived&quot;</defaultValue>
    <description>Indicates archive status of a survey result record.</description>
    <inlineHelpText>Indicates archive status of a survey result record.</inlineHelpText>
    <label>Archive Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ArdiraSurvey__Archive_Storage_Type</valueSetName>
    </valueSet>
</CustomField>