force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Archived_Segment1__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Archived_Segment1__c</fullName>
    <description>First segment of the archived result.</description>
    <inlineHelpText>First segment of the archived result.</inlineHelpText>
    <label>Archived Segment1</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>