force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Archived_Segment2__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Archived_Segment2__c</fullName>
    <description>Second segment of the archived result.</description>
    <inlineHelpText>Second segment of the archived result.</inlineHelpText>
    <label>Archived Segment2</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>