force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Archived_Segment3__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Archived_Segment3__c</fullName>
    <description>Third segment of the archived result.</description>
    <inlineHelpText>Third segment of the archived result.</inlineHelpText>
    <label>Archived Segment3</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>