force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Assessment_Result__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Assessment_Result__c</fullName>
    <description>Survey Assessment Result</description>
    <inlineHelpText>Survey Assessment Result.</inlineHelpText>
    <label>Assessment Result</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>