force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Assigned_Date__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Assigned_Date__c</fullName>
    <description>Survey Assignment date.</description>
    <formula>DATEVALUE( CreatedDate )</formula>
    <inlineHelpText>Survey assigned on date.</inlineHelpText>
    <label>Assigned Date</label>
    <type>Date</type>
</CustomField>