force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Assigned_To__c</fullName>
    <description>A survey assignee, User / Contact / Email or Anonymous. Anonymous indicates that a survey was responded by clicking the public survey link.</description>
    <formula>IF( ISPICKVAL(ArdiraSurvey__Assignee_Type__c, &quot;User&quot;), HYPERLINK( &apos;/&apos;+ ArdiraSurvey__Assigned_To_User__c,   ArdiraSurvey__Assigned_To_User__r.FirstName  +&quot; &quot;+  ArdiraSurvey__Assigned_To_User__r.LastName, &quot;_Self&quot;),  IF(  ISPICKVAL(ArdiraSurvey__Assignee_Type__c, &quot;Email&quot;),  ArdiraSurvey__Assigned_To_Email__c,  IF(  ISPICKVAL(ArdiraSurvey__Assignee_Type__c, &quot;Contact&quot;), HYPERLINK( &apos;/&apos;+ArdiraSurvey__Assigned_To_Contact__c,  ArdiraSurvey__Assigned_To_Contact__r.FirstName +&quot; &quot;+ ArdiraSurvey__Assigned_To_Contact__r.LastName, &quot;_Self&quot;), &quot;Anonymous&quot;) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>A survey assignee, User / Contact / Email or Anonymous. Anonymous indicates that a survey was responded by clicking the public survey link.</inlineHelpText>
    <label>Assigned To</label>
    <type>Text</type>
</CustomField>