force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Assigned_To_Contact__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Assigned_To_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact receiving this survey</description>
    <inlineHelpText>Contact as the survey participant / assignee.</inlineHelpText>
    <label>Assigned To Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Assigned Surveys</relationshipLabel>
    <relationshipName>Survey_Results</relationshipName>
    <type>Lookup</type>
</CustomField>