force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Assigned_To_Email__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Assigned_To_Email__c</fullName>
    <description>Email address receiving this survey.</description>
    <inlineHelpText>Email as the survey participant / assignee.</inlineHelpText>
    <label>Assigned To Email</label>
    <type>Email</type>
</CustomField>