force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Assigned_To_User__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Assigned_To_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User receiving this survey.</description>
    <inlineHelpText>User as the survey participant / assignee.</inlineHelpText>
    <label>Assigned To User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Survey_Results</relationshipName>
    <type>Lookup</type>
</CustomField>