force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Assignee__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Assignee__c</fullName>
    <description>Name of the survey assignee. Convenience field to be used as merge field in email templates.</description>
    <formula>IF(ISPICKVAL(ArdiraSurvey__Assignee_Type__c, &quot;User&quot;) , (IF(NOT(ISBLANK(ArdiraSurvey__Assigned_To_User__r.FirstName)),
    ArdiraSurvey__Assigned_To_User__r.FirstName + &quot; &quot;+ArdiraSurvey__Assigned_To_User__r.LastName,ArdiraSurvey__Assigned_To_User__r.LastName)),  IF(ISPICKVAL(ArdiraSurvey__Assignee_Type__c, &quot;Contact&quot;) , (IF(NOT(ISBLANK(ArdiraSurvey__Assigned_To_Contact__r.FirstName)),
    ArdiraSurvey__Assigned_To_Contact__r.FirstName + &quot; &quot;
    +ArdiraSurvey__Assigned_To_Contact__r.LastName,ArdiraSurvey__Assigned_To_Contact__r.LastName)),   IF(NOT(ISBLANK(ArdiraSurvey__Target_Record_Name__c)), ArdiraSurvey__Target_Record_Name__c,   IF(ISPICKVAL(ArdiraSurvey__Assignee_Type__c, &quot;Email&quot;), ArdiraSurvey__Assigned_To_Email__c, &quot;Anonymous&quot;) ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Name of the survey assignee. Convenience field to be used as merge field in email templates.</inlineHelpText>
    <label>Assignee</label>
    <type>Text</type>
</CustomField>