force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Assignee_First_Name__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Assignee_First_Name__c</fullName>
    <description>First name of the survey assignee. Convenience field to be used as merge field in email templates.</description>
    <formula>IF(ISPICKVAL(ArdiraSurvey__Assignee_Type__c, &quot;User&quot;), ArdiraSurvey__Assigned_To_User__r.FirstName,  IF(ISPICKVAL(ArdiraSurvey__Assignee_Type__c, &quot;Contact&quot;), ArdiraSurvey__Assigned_To_Contact__r.FirstName, &apos;&apos;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>First name of the survey assignee. Convenience field to be used as merge field in email templates.</inlineHelpText>
    <label>Assignee First Name</label>
    <type>Text</type>
</CustomField>