force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Assignee_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Assignee_Last_Name__c</fullName>
    <description>Last name of the survey assignee. Convenience field to be used as merge field in email templates.</description>
    <formula>IF(ISPICKVAL(ArdiraSurvey__Assignee_Type__c, &quot;User&quot;), ArdiraSurvey__Assigned_To_User__r.LastName, IF(ISPICKVAL(ArdiraSurvey__Assignee_Type__c, &quot;Contact&quot;), ArdiraSurvey__Assigned_To_Contact__r.LastName, &apos;&apos;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Last name of the survey assignee. Convenience field to be used as merge field in email templates.</inlineHelpText>
    <label>Assignee Last Name</label>
    <type>Text</type>
</CustomField>