force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Assignee_Type__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Assignee_Type__c</fullName>
    <description>Type of survey assignee.</description>
    <inlineHelpText>Specifies that a survey participants is a contact / email / user or unassigned (anonymous) response.</inlineHelpText>
    <label>Assignee Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>User</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Anonymous</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>