force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Community_Assignment__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Community_Assignment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, indicates that this survey assignment is for a community user. Community user can be an authenticated user or a guest user.</description>
    <inlineHelpText>If checked, indicates that this survey assignment is for a community user. Community user can be an authenticated user or a guest user.</inlineHelpText>
    <label>Community Assignment</label>
    <type>Checkbox</type>
</CustomField>