force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Community_Login_URL__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Community_Login_URL__c</fullName>
    <description>Login URL of the community associated with this survey. This is populated based on the community Id associated with the survey when this survey result is created. When an unauthenticated user clicks a response link requiring authentication, they are redirected to this URL.</description>
    <inlineHelpText>Login URL of the community associated with this survey. This is populated based on the community Id associated with the survey when this survey result is created.</inlineHelpText>
    <label>Community Login URL</label>
    <type>Url</type>
</CustomField>