force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Community_URL__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Community_URL__c</fullName>
    <description>URL of the community associated with this survey. This is populated based on the community Id associated with the survey when this survey result is created.</description>
    <inlineHelpText>URL of the community associated with this survey. This is populated based on the community Id associated with the survey when this survey result is created.</inlineHelpText>
    <label>Community URL</label>
    <type>Url</type>
</CustomField>