force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Completed_By_Auto__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Completed_By_Auto__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When a record status is updated by a Scheduled Job, a value would be set to true.</description>
    <inlineHelpText>When true, the survey status was set as Completed by the Scheduled Job.</inlineHelpText>
    <label>Completed By Auto</label>
    <type>Checkbox</type>
</CustomField>