force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Created_on_Demand__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Created_on_Demand__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, indicates that this survey result record was created just in time when the user clicked the link to respond to the survey. If this flag is set, survey response required notification is not sent to the assignee.</description>
    <inlineHelpText>If checked, indicates that this survey result record was created just in time when the user clicked the link to respond to the survey. If this flag is set, survey response required notification is not sent to the assignee.</inlineHelpText>
    <label>Created on Demand</label>
    <type>Checkbox</type>
</CustomField>