force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__CSAT_Case_Owner__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__CSAT_Case_Owner__c</fullName>
    <description>CSAT survey respondent’s case owner / support agent full name.</description>
    <formula>ArdiraSurvey__Target_Case__r.Owner:User.FirstName+&apos; &apos;+ArdiraSurvey__Target_Case__r.Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>CSAT survey respondent’s case owner / support agent full name.</inlineHelpText>
    <label>CSAT Case Owner</label>
    <type>Text</type>
</CustomField>