force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__CSAT_Case_Subject__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__CSAT_Case_Subject__c</fullName>
    <description>CSAT survey respondent’s case subject.</description>
    <formula>ArdiraSurvey__Target_Case__r.Subject</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>CSAT survey respondent’s case subject.</inlineHelpText>
    <label>CSAT Case Subject</label>
    <type>Text</type>
</CustomField>