force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__CSAT_Comment__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__CSAT_Comment__c</fullName>
    <description>CSAT survey respondent’s feedback comment.</description>
    <inlineHelpText>CSAT survey respondent’s feedback comment.</inlineHelpText>
    <label>CSAT Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>