force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__CSAT_Response__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__CSAT_Response__c</fullName>
    <description>CSAT survey respondent’s response in qualitative label.</description>
    <formula>IF( ArdiraSurvey__CSAT_Score__c ==1, &apos;Very unsatisfied&apos;, IF(ArdiraSurvey__CSAT_Score__c ==2, &apos;Unsatisfied&apos;, IF(ArdiraSurvey__CSAT_Score__c ==3, &apos;Neutral&apos;, IF(ArdiraSurvey__CSAT_Score__c ==4, &apos;Satisfied&apos;, IF(ArdiraSurvey__CSAT_Score__c ==5, &apos;Very satisfied&apos;, &apos;&apos;) ) ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>CSAT survey respondent’s response in qualitative label.</inlineHelpText>
    <label>CSAT Response</label>
    <type>Text</type>
</CustomField>