force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__CSAT_Score__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__CSAT_Score__c</fullName>
    <description>Score of a customer satisfaction question in the survey.</description>
    <inlineHelpText>Score of a customer satisfaction question in the survey.</inlineHelpText>
    <label>CSAT Score</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>