force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__CSAT_Very_Satisfied__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__CSAT_Very_Satisfied__c</fullName>
    <description>Set to 1 when the respondent’s response is very satisfied.</description>
    <formula>IF( ArdiraSurvey__CSAT_Score__c ==5, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Set to 1 when the respondent’s response is very satisfied.</inlineHelpText>
    <label>CSAT Very satisfied</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>