force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__CSAT_Very_Unsatisfied__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__CSAT_Very_Unsatisfied__c</fullName>
    <description>Set to 1 when the respondent’s response is very unsatisfied.</description>
    <formula>IF( ArdiraSurvey__CSAT_Score__c ==1, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Set to 1 when the respondent’s response is very unsatisfied.</inlineHelpText>
    <label>CSAT Very unsatisfied</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>