force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Dependent_Responded_Count__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Dependent_Responded_Count__c</fullName>
    <description>Count of dependent questions that have responses.</description>
    <inlineHelpText>Count of dependent questions that have responses.</inlineHelpText>
    <label>Dependent Responded Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>