force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Dependent_Total_Count__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Dependent_Total_Count__c</fullName>
    <description>Count of all dependent questions in the survey.</description>
    <inlineHelpText>Count of all dependent questions in the survey.</inlineHelpText>
    <label>Dependent Total Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>