force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Dispatch_at_Time__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Dispatch_at_Time__c</fullName>
    <description>Datetime at which the survey is to be dispatched for response collection.</description>
    <inlineHelpText>Future datetime at which the survey is to be dispatched for response collection. If not set survey will be dispatched immediately.  For this functionality to work, a scheduled job must be configured using the Apex class SurveyDispatchSchedulable.</inlineHelpText>
    <label>Dispatch at Future Time</label>
    <type>DateTime</type>
</CustomField>