force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Dispatch_Error__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Dispatch_Error__c</fullName>
    <description>Error encountered when dispatching this survey.</description>
    <inlineHelpText>Error encountered when dispatching this survey.</inlineHelpText>
    <label>Dispatch Error</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>