force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Dispatched_Time__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Dispatched_Time__c</fullName>
    <description>Date and time when the survey is dispatched and ready for data collection.</description>
    <inlineHelpText>Date and time when the survey is dispatched and ready for data collection.</inlineHelpText>
    <label>Dispatched Time</label>
    <type>DateTime</type>
</CustomField>