force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Due_Date__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Due_Date__c</fullName>
    <description>Date before which the survey response is due. Calculated by adding CT_Allowed_Time_to_Respond_Days__c field value of the survey to today&apos;s date.</description>
    <inlineHelpText>Survey Response due date. Calculated by adding &quot;Allowed_Time_to_Respond_Days&quot; field value of the survey to today&apos;s date.</inlineHelpText>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>