force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Email_Embedded_Question_Preview__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Email_Embedded_Question_Preview__c</fullName>
    <description>Rich text preview of the question to be embedded in the survey invitation notification.</description>
    <inlineHelpText>Rich text preview of the question to be embedded in the survey invitation notification.</inlineHelpText>
    <label>Email Embedded Question Preview</label>
    <length>131071</length>
    <type>Html</type>
</CustomField>