force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Email_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Email_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, indicates that this survey response record Target Contact/Lead has Opted out for Email Notification.</description>
    <inlineHelpText>If checked, indicates that this survey response record Target Contact/Lead has Opted out for Email Notification.</inlineHelpText>
    <label>Email Opt Out</label>
    <type>Checkbox</type>
</CustomField>