force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Email_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Email_Sent_Date__c</fullName>
    <inlineHelpText>Date when the email was sent to the recipient.</inlineHelpText>
    <label>Email Sent Date</label>
    <type>DateTime</type>
</CustomField>