force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Email_Status_Id__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Email_Status_Id__c</fullName>
    <inlineHelpText>The Id associated with the email.</inlineHelpText>
    <label>Email Status Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>