force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Enable_Workflow__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Enable_Workflow__c</fullName>
    <description>If true, survey workflow is enabled.</description>
    <formula>ArdiraSurvey__Survey__r.ArdiraSurvey__Enable_Workflow__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If true, survey workflow is enabled.</inlineHelpText>
    <label>Enable Workflow</label>
    <type>Checkbox</type>
</CustomField>