force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__End_State__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__End_State__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, indicates that this survey response record is in the end state and no further responses will be allowed.</description>
    <inlineHelpText>If checked, indicates that this survey response record is in the end state and no further responses will be allowed.</inlineHelpText>
    <label>End State</label>
    <type>Checkbox</type>
</CustomField>