force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__First_Open_Date__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__First_Open_Date__c</fullName>
    <inlineHelpText>Date when the email was first opened by recipient.</inlineHelpText>
    <label>First Open Date</label>
    <type>DateTime</type>
</CustomField>