force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Geo_Error__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Geo_Error__c</fullName>
    <description>To store error while performing Geo API call.</description>
    <inlineHelpText>Geo API failure message.</inlineHelpText>
    <label>Geo Error</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>