force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Geo_Participant_City__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Geo_Participant_City__c</fullName>
    <description>To store Participant Geo City.</description>
    <inlineHelpText>Information about Participant Geo City.</inlineHelpText>
    <label>Geo Participant City</label>
    <length>60</length>
    <type>Text</type>
</CustomField>