force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Geo_Participant_Country__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Geo_Participant_Country__c</fullName>
    <description>To store Participant Geo Country.</description>
    <inlineHelpText>Information about Participant Geo Country.</inlineHelpText>
    <label>Geo Participant Country</label>
    <length>60</length>
    <type>Text</type>
</CustomField>