force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Geo_Participant_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Geo_Participant_Country_Code__c</fullName>
    <description>To store Participant Geo Country Code.</description>
    <inlineHelpText>Information about Participant Geo Country Code.</inlineHelpText>
    <label>Geo Participant Country Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>