force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Geo_Participant_IP__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Geo_Participant_IP__c</fullName>
    <description>To store Participant Geo IP Address.</description>
    <inlineHelpText>Information about Participant Geo IP Address.</inlineHelpText>
    <label>Geo Participant IP</label>
    <length>50</length>
    <type>Text</type>
</CustomField>