force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Geo_Participant_Latitude__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Geo_Participant_Latitude__c</fullName>
    <description>To store Participant Geo latitude.</description>
    <inlineHelpText>Information about Participant Geo Latitude.</inlineHelpText>
    <label>Geo Participant Latitude</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>