force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Geo_Participant_Longitude__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Geo_Participant_Longitude__c</fullName>
    <description>To store Participant Geo Longitude.</description>
    <inlineHelpText>Information about Participant Geo Longitude.</inlineHelpText>
    <label>Geo Participant Longitude</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>