force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Geo_Participant_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Geo_Participant_Postal_Code__c</fullName>
    <description>To store Participant Geo Postal Code.</description>
    <inlineHelpText>Information about Participant Geo Postal Code.</inlineHelpText>
    <label>Geo Participant Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>