force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Geo_Participant_Region__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Geo_Participant_Region__c</fullName>
    <description>To store Participant Geo Region.</description>
    <inlineHelpText>Information about Participant Geo Region.</inlineHelpText>
    <label>Geo Participant Region</label>
    <length>40</length>
    <type>Text</type>
</CustomField>