force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Geo_Participant_Region_Code__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Geo_Participant_Region_Code__c</fullName>
    <description>To store Participant Geo Region Code.</description>
    <inlineHelpText>Information about Participant Geo Region Code.</inlineHelpText>
    <label>Geo Participant Region Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>