force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Geo_Participant_Timezone__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Geo_Participant_Timezone__c</fullName>
    <description>To store Participant Geo Timezone.</description>
    <inlineHelpText>Information about Participant Geo Timezone.</inlineHelpText>
    <label>Geo Participant Timezone</label>
    <length>60</length>
    <type>Text</type>
</CustomField>