force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Identifier_Configured_Language__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Identifier_Configured_Language__c</fullName>
    <description>Language identified through the default language configuration field of the survey. This value is populate when the survey result record is created.</description>
    <inlineHelpText>Language identified through the default language configuration field of the survey.</inlineHelpText>
    <label>Identifier Configured Language</label>
    <length>50</length>
    <type>Text</type>
</CustomField>