force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Incorrect_Answer_Count__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Incorrect_Answer_Count__c</fullName>
    <label>Incorrect Answer Count</label>
    <summaryFilterItems>
        <field>ArdiraSurvey__Question_Result__c.ArdiraSurvey__Is_Correct_Answer__c</field>
        <operation>equals</operation>
        <value>No</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>ArdiraSurvey__Question_Result__c.ArdiraSurvey__Question_Is_Main_Question__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>ArdiraSurvey__Question_Result__c.ArdiraSurvey__Survey_Result__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>